# Projeto-Agente-Inteligente

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: FAQ.md
docs/handoffs/: 2026-01-28-session-1.md  2026-01-29-session-4.md  2026-01-31-session-5.md  2026-01-31-session-6.md  handoff-2026-01-29-session-2.md  handoff-2026-01-29-session-3.md
src/: __init__.py  main.py
src/config/: __init__.py  agent_config.py  settings.py
src/contracts/: __init__.py  agent_response.py  appointment.py  structured_output.py  whatsapp_message.py
src/core/: __init__.py  agent.py  decision_engine.py  dependencies.py  fsm.py  guardrails.py  idempotency.py  knowledge.py  nlg.py  nlu.py  templates.py
src/db/: rls_policies.sql  schema.sql
src/handlers/: __init__.py  webhook.py
src/scripts/: auth_google.py  check_health.py  setup_supabase.py  verify_context.py  verify_env.py  verify_fix.py
src/services/: __init__.py  calendar.py  conversation_state.py  evolution.py  logfire_config.py  observability.py  supabase.py
src/static/: admin.html
src/utils/: __init__.py  dlq.py  logger.py
supabase/migrations/: 001_initial_schema.sql
tests/: conftest.py
tests/contract/: test_contracts.py
tests/unit/: test_agent_tools.py  test_calendar_service.py  test_decision_engine.py  test_fsm.py  test_knowledge.py  test_templates.py
