[project]
name = "whatsapp-agent"
version = "1.0.0"
description = "Agente de Atendimento WhatsApp com Pydantic AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-ai>=0.0.12",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "supabase>=2.3.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "logfire>=2.0.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "deprecated>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "httpx>=0.26.0",
    "types-redis>=4.6.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N815", "SIM105"]  # N815: camelCase from Evolution API, SIM105: contextlib.suppress not always clearer

[tool.ruff.lint.isort]
known-first-party = ["src"]
