[project]
name = "whatsapp-agent"
version = "1.0.0"
description = "Agente de Atendimento WhatsApp com Pydantic AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "pydantic-ai==1.50.0",
    "pydantic-settings==2.12.0",
    "openai==2.16.0",
    "supabase==2.27.2",
    "redis==7.1.0",
    "httpx==0.28.1",
    "structlog>=24.1.0",
    "logfire==4.20.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "deprecated>=1.2.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "httpx>=0.26.0",
    "types-redis>=4.6.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
# Pragmatic type checking - allows gradual typing
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Per-module overrides for external dependencies (best practice from mypy docs)
[[tool.mypy.overrides]]
module = [
    "src.services.*",
    "src.core.agent",
    "src.core.idempotency",
    "src.handlers.*",
    "src.utils.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "redis.*",
    "logfire.*",
    "pydantic_ai.*",
    "opentelemetry.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N815", "SIM105"]  # N815: camelCase from Evolution API, SIM105: contextlib.suppress not always clearer

[tool.ruff.lint.isort]
known-first-party = ["src"]
